fixed column-gap bug in firefox

--- a/scss/_corgi-collection-view.scss
+++ b/scss/_corgi-collection-view.scss
@@ -19,7 +19,7 @@
 			-webkit-column-count: 3;
 			-webkit-column-gap: 0px;
 			-moz-column-count: 3;
-			-moz-column-count: 0px;
+			-moz-column-gap: 0px;
 			column-count: 3;
 			column-gap: 0px;
 		}
